# zero2prod

./: Cargo.toml  Dockerfile  README  spec.yaml
.github/workflows/: general.yml
src/: lib.rs  telemetry.rs
src/domain/: subscriber_email.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
