[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Bernardo Chaves <bernardo.amc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0-beta.8"
actix-http = "=3.0.0-beta.8"
serde = { version = "1", features = ["derive"]}

[dev-dependencies]
reqwest = "0.11"
actix-rt = "2"
tokio = "1"
